--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.0/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="{{ "/assets/css/main.css" | relative_url }}">
+  <!-- Fallback static stylesheet for direct file/static-server previews -->
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
