--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,9 @@
             <li class="nav-item">
               <a class="nav-link {% if page.url == '/cv/' %}active{% endif %}" href="{{ "/cv/" | relative_url }}">CV</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link {% if page.url == '/mae3270/' %}active{% endif %}" href="{{ "/mae3270/" | relative_url }}">MAE 3270</a>
+            </li>
           </ul>
         </div>
       </div>
