--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,9 @@
             <li class="nav-item">
               <a class="nav-link {% if page.url == '/mae3270/' %}active{% endif %}" href="{{ "/mae3270/" | relative_url }}">MAE 3270</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link {% if page.url == '/mae3260/' %}active{% endif %}" href="{{ "/mae3260/" | relative_url }}">MAE 3260</a>
+            </li>
           </ul>
         </div>
       </div>
