Add MAE 3230 page with YouTube embed and update navigation

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,6 +35,9 @@
               <a class="nav-link {% if page.url == '/mae3270/' %}active{% endif %}" href="{{ "/mae3270/" | relative_url }}">MAE 3270</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link {% if page.url == '/mae3230/' %}active{% endif %}" href="{{ "/mae3230/" | relative_url }}">MAE 3230</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link {% if page.url == '/mae3260/' %}active{% endif %}" href="{{ "/mae3260/" | relative_url }}">MAE 3260</a>
             </li>
           </ul>
